[gd_scene load_steps=15 format=3 uid="uid://cnc6sua8jiqfa"]

[ext_resource type="FontFile" uid="uid://dy0ca7iescwax" path="res://font/LightNovelPOPv2.otf" id="1_m7ywg"]
[ext_resource type="Script" path="res://setting_menu/main_settings.gd" id="2_k0yql"]
[ext_resource type="PackedScene" uid="uid://6kkjprn24uee" path="res://setting_menu/sound_volume.tscn" id="3_1vdmk"]

[sub_resource type="Gradient" id="Gradient_cbof8"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 0.752941)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_txykl"]
gradient = SubResource("Gradient_cbof8")
width = 2
height = 24

[sub_resource type="Gradient" id="Gradient_k3ear"]
offsets = PackedFloat32Array(0.471861)
colors = PackedColorArray(1, 1, 1, 0.501961)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pvvud"]
gradient = SubResource("Gradient_k3ear")
width = 2
height = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2roji"]
bg_color = Color(1, 1, 1, 0.752941)
border_width_top = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_klv8w"]
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_687wh"]
bg_color = Color(0, 0, 0, 0.878431)

[sub_resource type="Theme" id="Theme_o1qve"]
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("1_m7ywg")
CheckButton/font_sizes/font_size = 20
CheckButton/fonts/font = ExtResource("1_m7ywg")
HSlider/icons/grabber = SubResource("GradientTexture2D_txykl")
HSlider/icons/grabber_highlight = SubResource("GradientTexture2D_txykl")
HSlider/icons/tick = SubResource("GradientTexture2D_pvvud")
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_2roji")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_2roji")
HSlider/styles/slider = SubResource("StyleBoxFlat_klv8w")
Label/fonts/font = ExtResource("1_m7ywg")
LineEdit/font_sizes/font_size = 20
LineEdit/fonts/font = ExtResource("1_m7ywg")
Panel/styles/panel = SubResource("StyleBoxFlat_687wh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pomst"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="LabelSettings" id="LabelSettings_vy62w"]
font_size = 24

[sub_resource type="Theme" id="Theme_yjfcl"]
Button/font_sizes/font_size = 16

[node name="Settings" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_o1qve")
script = ExtResource("2_k0yql")

[node name="ButtonBack" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 7.0
offset_right = -8.0
offset_bottom = 72.0
grow_horizontal = 0
text = "BACK"

[node name="SoundVolume" parent="." instance=ExtResource("3_1vdmk")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -448.0
offset_top = 104.0
offset_right = 448.0
offset_bottom = 360.0
grow_horizontal = 2

[node name="LineEditSaveDir" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_top = -64.0
offset_right = -256.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/read_only = SubResource("StyleBoxFlat_pomst")
placeholder_text = "Settings Save Directory"
editable = false

[node name="Label" type="Label" parent="LineEditSaveDir"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -192.0
offset_right = -8.0
grow_vertical = 2
text = "SAVE_DIR"
label_settings = SubResource("LabelSettings_vy62w")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Server" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -448.0
offset_top = 384.0
offset_right = 448.0
offset_bottom = 576.0
grow_horizontal = 2
theme = SubResource("Theme_yjfcl")

[node name="GridContainer" type="GridContainer" parent="Server"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 2

[node name="ServerList" type="ItemList" parent="Server/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeleteButton" type="Button" parent="Server/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Delete"

[node name="AdditionalServer" type="LineEdit" parent="Server/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AddButton" type="Button" parent="Server/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ADD"

[node name="ButtonSave" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -72.0
offset_right = -16.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
text = "SAVE"

[connection signal="pressed" from="ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="Server/GridContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Server/GridContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="ButtonSave" to="." method="_on_button_save_pressed"]
